example/secondfile/objects/Analytical_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Communities_Licenses__c</fullName>
        <label>Assigned Communities Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Communities_Licenses__c</fullName>
        <label>Available Communities Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Communities_Licenses__c</fullName>
        <label>Total Communities Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Analytical Snapshot</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Analytical Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytical Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>